@@ -1,0 +1,1 @@
+gray-arrow.png source=PhET
